[package]
name = "validation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbutil = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true, features = ["base64"] }

[features]
default = ["std"]
std = ["dep:arbutil", "dep:brotli", "dep:serde", "dep:serde_json", "dep:serde_with"]
rkyv = ["dep:rkyv", "std"]
transfer = ["std"]
